Name: Mella
Version: 0.1
Description: The Mella Interactive Theorem Prover
License: BSD3
License-File: LICENSE
Author: Alasdair Armstrong
Maintainer: alasdair.armstrong+proveit@gmail.com
Build-Type: Simple
Cabal-Version: >= 1.10

Executable mella
  Main-Is: Lang.hs
  Other-Modules:
    Lang.Error,
    Lang.Interactive,
    Lang.PrettyPrint,
    Lang.Tactic.Waldmeister,
    Lang.Term,
    Lang.Term.Identifier,
    Lang.Term.Operator,
    Lang.Term.Parser,
    Lang.Term.Tokenizer,
    Lang.TopLevel,
    Lang.TopLevel.Monad,
    Lang.TopLevel.Parser,
    Lang.TopLevel.Tokenizer,
    Lang.TopLevel.HParser,
    Lang.TopLevel.Command,
    Lang.TopLevel.Command.Base,
    Lang.TopLevel.Command.EqReasoning,
    Lang.TopLevel.Command.ProofGeneral,
    Lang.TopLevel.Command.Waldmeister,
    Lang.TypeChecker.TypeChecker,
    Lang.TypeChecker.Monad,
    Lang.TypeChecker.CoC,
    Lang.TypeChecker.Meta,
    Lang.TypeChecker.Equality,
    Lang.Util.Counter,
    Lang.Util.EitherT,
    Lang.Util.UndoStateT
  Default-Language: Haskell2010
  Build-Depends:
    base >= 3 && < 5,
    text == 0.11.*,
    time >= 0,
    ansi-terminal == 0.5.*,
    transformers == 0.2.*,
    containers == 0.4.*,
    attoparsec == 0.10.*,
    random == 1.*,
    process == 1.*,
    directory == 1.*,
    array == 0.4.*,
    filepath == 1.2.*,
    http-wget == 0.6.*,
    parsec == 3.1.*
